Revert "update django: security fix"
This reverts commit 96f0a9565ac3d65f07013f0d7cfea5a6946290d6.

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ ipdb = "*"
 
 [packages]
 boto3 = "*"
-django = ">=2.0.2"
+django = "==2.0.*"
 dj-database-url = "==0.5"
 django-compressor = "*"
 django-cors-headers = "==2.4.*"
